  - Fixed some missing terrain pictures for the nation
  - Added a new icon for "Renewable Energy Hotspot"

 Interface:
  - Fixed misalignment between MIOs and nuclear policies
  - Fixed facility list being cut-off at the bottom
  - Fixed clippy

 Localization:
  - Fixed missing tooltip for Medium Naval Nuclear Engines
  - Improved the localization of the "Serbia Asks for Investments" event

 Special Projects:
  - Super Heavy Tank Turrets are now locked behind both "Large Gun Tech" & 4th Generation Tank Hulls
  - Increased the Civilian R&D Breakthrough cost for "Thorium Nuclear Fuel"
  - Added a resource cost to "Super Heavy Tank Turrets" to help make it more balanced
  - "Fully Autonomous Computer Frameworks" has now moved to "Human Imitation AI"
  - Moved "Double Cannons" module for AFVs from the hull tech into a special project and buffed the stats a little bit

 Technology:
  - AFV steel and aluminium armour is now unlocked by both AFV hulls and light tank hulls
  - Separated 1965 Artillery and SP Artillery into their own techs

 User Interface:
  - Fixed the free floating UI in the construction menu and made it even

v1.11.0a

 Bugfix:
  - Fixed the paratrooper_raids from vanilla spamming a has_tech check bloating the logs
  - Fixed an improper visible check for the idea "Lacks International Recognition"
  - Fixed freezing for non-MTG owners
  - Fixed some production costs for IRBM/ICBMs
  - Fixed some small minor errors for nations
  - Fixed some other small bugs in the UI
  - Fixed a crash with Syrias "Statement of 100" Event

v1.11.0

 Achievements:
  - Added a tooltip to clean up the tooltips for the African Nation achievements

 AI:
  - Added an exception to the leave NATO for Spain so Unidas Podemos will leave NATO
  - AI Russia should no longer do "Challenge NATO" focus if its already at war
  - Improved the purchasing AI for nations who are buying reactor grade fuel ensuring some rivals aren't purchasing fuel from one another