@@ -87,11 +87,17 @@ decision_category_energy = {
 		}
 	}
 
-
 	energy_buy_reactor_grade_material = {
 		icon = GFX_decision_energy_buy_button
 		allowed = { always = yes }
 		visible = {
+			ROOT = {
+				set_temp_variable = { temp = nuclear_fuel_consumption }
+				multiply_temp_variable = { temp = 2 }
+				NOT = { check_variable = { var_nuke_nuclear_material_prod > temp } }
+				# Check if you have nuclear reactors
+				has_nuclear_reactors = yes
+			}
 			FROM = {
 				NOT = { has_war_with = ROOT }
 				NOT = {
@@ -103,9 +109,6 @@ decision_category_energy = {
 			}
 		}
 		available = {
-			ROOT = {
-				has_nuclear_reactors = yes
-			}
 			FROM = {
 				has_enrichment_facilities = yes
 				has_reactor_material_stockpile = yes
