@@ -339,7 +339,5 @@ decision_category_energy = {
 }
 debt_default_decisions = {
 	icon = GFX_decisions_category_dept
-	visible = {
-	}
 	priority = 100
 }
