@@ -8,7 +8,7 @@ shared_focus = {
 	}
 
 	x = 10
-	y = 8
+	y = 9
 
 	#Libya
 	offset = {
