@@ -21133,7 +21133,7 @@ focus_tree = {
 					}
 					add_extra_state_shared_building_slots = 1
 				}
-				add_to_variable = { var_reactor_material_stockpile = 500 }
+				add_to_temp_variable = { change_resource = 500 }
 			}
 			if = {
 				limit = { controls_state = 81 }
@@ -21147,7 +21147,7 @@ focus_tree = {
 					}
 					add_extra_state_shared_building_slots = 1
 				}
-				add_to_variable = { var_reactor_material_stockpile = 500 }
+				add_to_temp_variable = { change_resource = 500 }
 			}
 			if = {
 				limit = { controls_state = 82 }
@@ -21161,7 +21161,7 @@ focus_tree = {
 					}
 					add_extra_state_shared_building_slots = 1
 				}
-				add_to_variable = { var_reactor_material_stockpile = 500 }
+				add_to_temp_variable = { change_resource = 500 }
 			}
 			if = {
 				limit = { controls_state = 265 }
@@ -21175,8 +21175,9 @@ focus_tree = {
 					}
 					add_extra_state_shared_building_slots = 1
 				}
-				add_to_variable = { var_reactor_material_stockpile = 500 }
+				add_to_temp_variable = { change_resource = 500 }
 			}
+			change_reactor_grade_material_effect = yes
 		}
 
 		ai_will_do = {
