@@ -1061,7 +1061,8 @@ focus_tree = {
 					}
 					add_extra_state_shared_building_slots = 1
 				}
-				add_to_variable = { var_reactor_material_stockpile = 500 }
+				set_temp_variable = { change_resource = 500 }
+				change_reactor_grade_material_effect = yes
 			}
 			set_temp_variable = { treasury_change = -10 }
 			modify_treasury_effect = yes
