@@ -27,22 +27,22 @@ defined_text = {
 
 	text = {
 		trigger = { check_variable = { culture_index = 0 } }
-		localization_key = "[?SPR_culture_opinion^0|Y0]"
+		localization_key = SPR_culture_index_1
 	}
 	text = {
 		trigger = { check_variable = { culture_index = 1 } }
-		localization_key = "[?SPR_culture_opinion^1|Y0]"
+		localization_key = SPR_culture_index_2
 	}
 	text = {
 		trigger = { check_variable = { culture_index = 2 } }
-		localization_key = "[?SPR_culture_opinion^2|Y0]"
+		localization_key = SPR_culture_index_3
 	}
 	text = {
 		trigger = { check_variable = { culture_index = 3 } }
-		localization_key = "[?SPR_culture_opinion^3|Y0]"
+		localization_key = SPR_culture_index_4
 	}
 	text = {
 		trigger = { check_variable = { culture_index = 4 } }
-		localization_key = "[?SPR_culture_opinion^4|Y0]"
+		localization_key = SPR_culture_index_5
 	}
 }
