@@ -9339,12 +9339,12 @@ country_event = {
 		hidden_effect = {
 			jirik_ukraine_novorossia = yes
 			if = {
-				limit = { 
+				limit = {
 					OR = {
-						UKR = { owns_state = 669 } 
-						UKR = { owns_state = 1112 } 
+						UKR = { owns_state = 669 }
+						UKR = { owns_state = 1112 }
 						CRM = {
-							is_subject_of = SOV	
+							is_subject_of = SOV
 						}
 					}
 				}
@@ -13509,7 +13509,7 @@ country_event = {
 		}
 	}
 	option = {
-		name = sov_economic.13.a
+		name = sov_economic.13.b
 		log = "[GetDateText]: [This.GetName]: sov_economic.13.a executed"
 		SOV = { country_event = sov_economic.15 }
 		ai_chance = {
