@@ -2012,3 +2012,8 @@ l_english:
  galicians_loc: "Galegos (Galicians)"
  andalucians_loc: "Andaluces (Andalucians)"
  canarians_loc: "Canarios (Canarians)"
+ SPR_culture_index_1: "[?SPR_culture_opinion^0|Y0]"
+ SPR_culture_index_2: "[?SPR_culture_opinion^1|Y0]"
+ SPR_culture_index_3: "[?SPR_culture_opinion^2|Y0]"
+ SPR_culture_index_4: "[?SPR_culture_opinion^3|Y0]"
+ SPR_culture_index_5: "[?SPR_culture_opinion^4|Y0]"
