@@ -113,6 +113,7 @@
  EQ_MOD_CAT_spaa_coax_machinegun_category_TITLE: "Additional Machine Guns"
  EQ_MOD_CAT_tank_longer_gun_category_TITLE: "Barrel Extension"
  EQ_MOD_CAT_light_tanks_reload_modules_TITLE: "AFV Reload System"
+ EQ_MOD_CAT_tank_large_special_main_armament_TITLE: "Large Special Tank Weapons"
 
  ### Modules ###
  light_tank_afv_automatic_loading: "AFV Reload System"
