@@ -82,6 +82,8 @@ v1.11.1
  Localization:
   - Fixed missing tooltip for Medium Naval Nuclear Engines
   - Improved the localization of the "Serbia Asks for Investments" event
+  - Added displays to some Italian and Venezuelan focuses which just added reactor material without notifying the player
+  - Fixed the Spanish opinion changes no longer appearing as they should
 
  Special Projects:
   - Super Heavy Tank Turrets are now locked behind both "Large Gun Tech" & 4th Generation Tank Hulls
@@ -96,6 +98,7 @@ v1.11.1
 
  User Interface:
   - Fixed the free floating UI in the construction menu and made it even
+  - Energy Decisions for Nuclear Energy won't show up any longer if you do not have any nuclear reactors or if you are producing double the enrichment fuel of your consumption
 
 v1.11.0a
 
